--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Manoj's Portfolio</h1>
     <h2>I'm a learner</h2>
     <hr />
-    <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite project</a></h3>
-    <img src="./BirthdayProject.png" alt="Birthday Project" height="100">
+    <h3><a href="./public/invite.html">Birthday Invite project</a></h3>
+    <img src="./assets/images/BirthdayProject.png" alt="Birthday Project" height="300">
 </body>
 </html>
